--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="PetShop Gafsa | Animalerie Premium en Tunisie">
     <meta property="og:description" content="Votre animalerie de confiance à Gafsa avec des produits premium et services professionnels">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://petshop-gafsa.github.io">
+    <meta property="og:url" content="https://maldingo.github.io/Petshop/">
     <meta property="og:image" content="/assets/images/og-image.jpg">
     
     <!-- Twitter Card Meta Tags -->
